Add: tbody option

--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -1,5 +1,8 @@
 {
   "formVersion": "v1.6.1",
+  "initialOptions": {
+    "tbodyOption": false
+  },
   "initialData": [
     {
       "id": "setting00",
