--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contact",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "homepage": "https://czekras.github.io/contact",
   "private": true,
   "dependencies": {
@@ -45,5 +45,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.0.0"
-  }
+  },
+  "license": "MIT"
 }
